# kinds

./: .bumpversion.cfg  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml  setup.cfg
.chglog/: config.yml
.github/workflows/: test.yml
docs/: Makefile  conf.py
docs/_templates/: badges.html  github.html  moreinfo.html
docs/pages/: changelog.rst  dicts.rst  fspec.rst  kinds.rst  versioned.rst
kinds/: __init__.py  dicts.py  fspec.py  versioned.py
tests/: conftest.py
tests/test_functions/: test_some_function.py  test_unlink_path.py
tests/test_types/: test_fspec.py  test_stranydict.py
