[tool.poetry]
name = "kinds"
description = "Project to help with typing in multi-version python projects."
version = "0.2.0"
license = "MIT"

authors = [
  "Quien Sabe <qs5779@mail.com>",
]

readme = "README.md"

repository = "https://github.com/wtfo-guru/kinds"

keywords = []

classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.group.test.dependencies]
mypy = "^0.982"

wemake-python-styleguide = "^0.17"
flake8-pytest-style = "^1.6"
doc8 = "^1.0"
nitpick = "^0.32"


pytest = "^7.2"
pytest-cov = "^4.0"
pytest-randomly = "^3.12"
black = "^22.12.0"
setuptools = "^65.7.0"
packaging = "^22.0"
wheel = "^0.38"
importlib-metadata = { version = "<5.0", python = "<3.8" }

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
sphinx = "^5.2"
sphinx-autodoc-typehints = "^1.23"
m2r2 = "^0.3"
tomli = "^2.0"



[tool.poetry.group.dev.dependencies]
bump2version = "^1.0.1"

[build-system]
requires = ["poetry-core>=1.2.0"]
build-backend = "poetry.core.masonry.api"


[tool.nitpick]
style = "https://raw.githubusercontent.com/wemake-services/wemake-python-styleguide/master/styles/nitpick-style-wemake.toml"
