[tool.poetry]
name = "kinds"
description = "Project to help with typing in multi-version python projects."
version = "0.2.2-dev0"
license = "MIT"

authors = [
  "Quien Sabe <qs5779@mail.com>",
]

readme = "README.md"

repository = "https://github.com/wtfo-guru/kinds"

keywords = []

classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.group.test.dependencies]
mypy = "^1.0"
requests-cache = "^0.9"

wemake-python-styleguide = "^0.17"
flake8-pytest-style = "^1.6"
doc8 = "^1.0"
nitpick = "^0.32"


pytest = "^7.2"
pytest-cov = "^4.0"
pytest-randomly = "^3.12"
isort = { version = "<5.12.0", python = "<3.8" }
black = "^23.1.0"
setuptools = "^67.5.0"
packaging = "^23.0"
wheel = "^0.38"
# importlib-metadata = { version = "<5.0", python = "<3.8" }

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
sphinx = "^5.2"
m2r2 = "^0.3"
tomli = "^2.0"
sphinx-autodoc-typehints = "^1.22"



[tool.poetry.group.dev.dependencies]
bump2version = "^1.0.1"

[build-system]
requires = ["poetry-core>=1.2.0"]
build-backend = "poetry.core.masonry.api"


[tool.nitpick]
style = "https://raw.githubusercontent.com/wemake-services/wemake-python-styleguide/master/styles/nitpick-style-wemake.toml"
